--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
@@ -25,7 +25,7 @@
                                 <h4 class="titulo-left-h3">Actualizar información desde formulario</h4>
                                 <p>En esta sección el usuario puede actualizar los datos en linea directamente desde un formulario electronico, el cual
                                     presenta los datos del grupo empresarial prediligenciados.</p>
-                                <p:commandButton value="Fromulario" action="/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml" />
+                                <p:commandButton value="Formulario" action="/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml" />
                             </div>
                         </div>
                         <div class="ui-grid-row">
