--- a/GrupoEmpresarial-war/web/login.xhtml
+++ b/GrupoEmpresarial-war/web/login.xhtml
@@ -70,7 +70,7 @@
                         </div>
                     </div>
 
-                    <p:dialog header="" widgetVar="dlg" resizable="false" modal="false">
+                    <p:dialog header="Datos de acceso" widgetVar="dlg" resizable="false" modal="false">
                         <h:panelGrid columns="2" cellpadding="5">
                             <h:outputLabel for="username" value="Usuario:" styleClass="etiquetaFormulario"/>
                             <p:inputText id="username" value="#{MbLogin.username}" 
