--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-informe-unidad-legal.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-informe-unidad-legal.xhtml
@@ -2,14 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
+      
       xmlns:p="http://primefaces.org/ui">
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h:form style="height: 88%;" >
+                <h:form id="frmInfUnidadLegal" style="height: 88%;" >
                     <p:growl id="msnInforUnidadLegal" showDetail="true" />
                     <h3 class="titulo-center-h3">REPORTE DE PERFILAMIENTO DE LAS UNIDADES LEGALES</h3>
-                    <!--p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="100%" player="pdf"/-->
+                    <!--p:media value="#{MbReporteUnidadLegal.contenido}" cache="false" width="100%" height="100%" player="pdf"/-->
 
                     <div class="ui-grid ui-grid-responsive">
                         <div class="ui-grid-row">
@@ -17,8 +18,8 @@
                                 <h4 class="titulo-left-h3">Generación de Reporte</h4>
                                 <p>En esta sección el usuario puede generar un reporte en formato PDF, donde se describe todos los datos de la unidades legales del grupo empresarial.</p>
                                 <p:commandButton id="btnGenerarReporteUnidadLegal" value="Generar reporte" update="dlgReportePdf" oncomplete="PF('dlg').show();"
-                                                 actionListener="#{MbReporteGrupoEmpresa.generarReportePdf(nerv['reporte.unidadLegal.path'], nerv['reporte.unidadLegal.archivo'])}"/>
-                                <!--p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="100%" height="90%" player="pdf"/-->
+                                                 actionListener="#{MbReporteUnidadLegal.generarReporteUnidadesLegalesPdf(nerv['reporte.unidadLegales.path'], nerv['reporte.unidadLegales.archivo'])}"/>
+                                <!--p:media value="#{MbReporteUnidadLegal.contenido}" cache="false" width="100%" height="90%" player="pdf"/-->
                             </div>
                         </div>
                         <div class="ui-grid-row">
@@ -40,8 +41,14 @@
                                             <p:outputLabel value="#{fila.nombreRegistrado}"/>
                                         </p:column>
                                         <p:column headerText="">
-                                            <p:commandLink action="#{MbFormUnidadLegal.seleccionarUnidadLegal(fila.id.id)}" ajax="false">
-                                                <h:outputText value="Editar Información" />
+                                            <p:commandLink update="frmInfUnidadLegal:dlgReportePdf" oncomplete="PF('dlg').show();" 
+                                                           actionListener="#{MbReporteUnidadLegal.generarReporteUnidadLegalPdf(nerv['reporte.unidadLegal.path'], nerv['reporte.unidadLegal.archivo'],fila.id.id)}" >
+                                                <!--h:outputText value="Reporte de datos" /-->
+                                                <div class="ui-grid-col-3"><i class="fa fa-fw fa-file-pdf-o"></i>Reporte</div>
+                                            </p:commandLink>
+                                            <p:commandLink action="#{MbFormUnidadLegal.abrirFormularioActualizarDatos(fila.id.id)}" ajax="false">
+                                                <!--h:outputText value="Formulario actualización datos" /-->
+                                                <div class="ui-grid-col-3"><i class="fa fa-fw fa-edit"></i>Formulario</div>
                                             </p:commandLink>
                                         </p:column>
                                     </p:dataTable>
@@ -68,12 +75,12 @@
                         </div>
                     </div>
 
-                    <p:dialog id="dlgReportePdf" header="Reporte Grupo Empresa" widgetVar="dlg" 
-                              resizable="false" modal="false" width="800" height="550">
+                    <p:dialog id="dlgReportePdf" header="Reporte Unidad Legal" widgetVar="dlg" appendTo="@(body)"
+                              resizable="false" modal="true" width="800" height="550">
                         <!--p:panelGrid id="pnlReportePdf" columns="1" style="width: 100%; height: 100%">
                             </p:panelGrid-->
                         <p:outputPanel deferred="true">
-                            <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="756" height="550" player="pdf"/>
+                            <p:media value="#{MbReporteUnidadLegal.contenido}" cache="false" width="756" height="550" player="pdf"/>
                         </p:outputPanel>
                     </p:dialog>
 
